# MicToggle

./: .gitignore  CMakeLists.txt  LICENSE  README.md  toolchain-mingw64.cmake
.github/workflows/: release.yml
res/: resource.h  resources.rc  version.rc.in
src/: audio_endpoint.cpp  audio_endpoint.h  main.cpp  wav_resource.cpp  wav_resource.h
